# observability

./: .gitignore  README.md  docker-compose.yml
alertmanager/: alertmanager.yml
grafana/config/: grafana.ini
loki/: local-config.yaml
prometheus/config/: prometheus.yml
prometheus/config/rules/: alerts_rules.yaml
promtail/: config.yml
services/auth-service/: Dockerfile  Makefile  go.mod  main.go
services/auth-service/proto/auth/: auth_grpc.pb.go
services/coin-service/: Dockerfile  Makefile  coin_pb2.py  coin_pb2_grpc.py  main.py
services/coin-service/proto/: coin.proto
services/main-service/: Dockerfile  Makefile  go.mod  go.sum  main.go
services/main-service/proto/: auth.proto  coin.proto
services/main-service/proto/auth/: auth.pb.go
services/main-service/proto/coin/: coin.pb.go  coin_grpc.pb.go
services/main-service/proto/user/: user.pb.go  user_grpc.pb.go
services/user-service/: Cargo.toml  Dockerfile  Makefile
services/user-service/proto/: user.proto
services/user-service/src/: client.rs  server.rs
