[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the User gRPC server
name = "user-server"
path = "src/server.rs"

[[bin]] # Bin to run the User gRPC client
name = "user-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9"